--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,11 +1,73 @@
-.main {
+.mainHeading {
+  font-family: inter tight, Sans-serif;
+  font-size: clamp(3rem, 4.5rem, 5vw);
+  font-weight: 600;
+  text-transform: none;
+  font-style: normal;
+  line-height: 1em;
+  letter-spacing: -1px;
+  word-spacing: 0;
+  margin-bottom: 5%;
+}
+
+.subHeading {
+  color: #242627;
+  font-size: clamp(1.6rem, 2rem, 2.55vw);
+  font-weight: 400;
+  text-transform: none;
+  font-style: normal;
+  line-height: 1.4em;
+  letter-spacing: 0;
+  word-spacing: 0;
+  margin-bottom: 30px;
+}
+
+.btn {
+  font-family: inter tight, Sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: none;
+  font-style: normal;
+  line-height: 1.2em;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #ffffff;
+  background-color: #010ed0;
+  border-radius: 4px 4px 4px 4px;
+  padding: 14px 24px;
+}
+
+
+
+.secondbtn {
+  font-family: inter tight, Sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: none;
+  font-style: normal;
+  line-height: 1.2em;
+  letter-spacing: 0;
+  word-spacing: 0;
+  color: #010ED0;
+  background-color: #DEE0FF;
+  border-radius: 4px 4px 4px 4px;
+  padding: 14px 24px;
+}
+
+.infoContainer {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
+  justify-content: center;
+  margin: 30px auto;
 }
+
+.infoTextFirst {
+  font-family: inter tight, Sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+}
+
+
 
 .description {
   display: inherit;
@@ -107,6 +169,7 @@
 .logo {
   position: relative;
 }
+
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
@@ -178,11 +241,9 @@
     border-radius: 0;
     border: none;
     border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
+    background: linear-gradient(to bottom,
+        rgba(var(--background-start-rgb), 1),
+        rgba(var(--callout-rgb), 0.5));
     background-clip: padding-box;
     backdrop-filter: blur(24px);
   }
@@ -193,11 +254,9 @@
     inset: auto 0 0;
     padding: 2rem;
     height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
+    background: linear-gradient(to bottom,
+        transparent 0%,
+        rgb(var(--background-end-rgb)) 40%);
     z-index: 1;
   }
 }
@@ -223,6 +282,7 @@
   from {
     transform: rotate(360deg);
   }
+
   to {
     transform: rotate(0deg);
   }
