--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -35,6 +35,7 @@
   background-color: #010ed0;
   border-radius: 4px 4px 4px 4px;
   padding: 14px 24px;
+
 }
 
 
@@ -52,6 +53,7 @@
   background-color: #DEE0FF;
   border-radius: 4px 4px 4px 4px;
   padding: 14px 24px;
+  margin-left: 15px;
 }
 
 .infoContainer {
@@ -67,7 +69,50 @@
   font-weight: 600;
 }
 
+.footerHeading {
+  color: #ffffff;
+  font-size: 26px;
+  font-weight: 600;
+  font-family: inter tight, Sans-serif;
+}
 
+.footerList {
+  color: #f5f5f1b3;
+  font-size: 16px;
+  font-family: inter tight, Sans-serif;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 15px;
+  margin-bottom: 20px;
+  display: flex;
+}
+
+.footerBgContainer {
+  transition-property: transform, opacity;
+  transition-timing-function: cubic-bezier(0, .33, .07, 1.03);
+  transition-duration: 1s;
+}
+
+.footerMotionContainer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  transform-origin: var(--e-transform-origin-y) var(--e-transform-origin-x);
+}
+
+.footerBgDots {
+  background-image: url('../assests//footer-dots.svg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 90% auto;
+  width: 100%;
+  height: 100%;
+  --scale: 1;
+  transform: scale(var(--scale));
+}
 
 .description {
   display: inherit;
